--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2020-06-29-premierleague</name>
+	<name>ESAME 29-06-2020 -pomeriggio- PARTE 1 (Byme)</name>
 	<comment></comment>
 	<projects>
 	</projects>
